<?php
/**
 * Aleksandr Kozhevnikov <iamdevice@gmail.com>
 * Date: 07.02.2018 9:10
 */

namespace ChessBoard\Entity;

interface FigureInterface
{
    public function getName(): string;
}
